[gd_scene load_steps=16 format=3 uid="uid://lruas7lofysg"]

[ext_resource type="Texture2D" uid="uid://cl1q3x2qvvjp" path="res://prototype-sprites/main-menu-background.png" id="1_sxkdo"]
[ext_resource type="Script" path="res://ui/game-over.gd" id="1_sxxry"]
[ext_resource type="Texture2D" uid="uid://c1uiso5tt8dog" path="res://prototype-sprites/replay-button-idle.png" id="2_mty3d"]
[ext_resource type="Texture2D" uid="uid://dlsjgf8ustgtm" path="res://prototype-sprites/replay-button-pressed.png" id="3_ywqux"]
[ext_resource type="Texture2D" uid="uid://4k3y0noeidg2" path="res://prototype-sprites/exit-button-idle.png" id="4_loady"]
[ext_resource type="Texture2D" uid="uid://bfp5v7fsnx1qs" path="res://prototype-sprites/exit-button-pressed.png" id="5_t86hf"]
[ext_resource type="FontFile" uid="uid://d2epuvtq0plau" path="res://ui/Minecraft.ttf" id="7_e5i0j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_llq3b"]
atlas = ExtResource("1_sxkdo")
region = Rect2(5120, 0, 1024, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_quhl3"]
atlas = ExtResource("1_sxkdo")
region = Rect2(4096, 0, 1024, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_j68kt"]
atlas = ExtResource("1_sxkdo")
region = Rect2(3072, 0, 1024, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_luhjb"]
atlas = ExtResource("1_sxkdo")
region = Rect2(2048, 0, 1024, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf1k8"]
atlas = ExtResource("1_sxkdo")
region = Rect2(1024, 0, 1024, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_wij6b"]
atlas = ExtResource("1_sxkdo")
region = Rect2(0, 0, 1024, 648)

[sub_resource type="SpriteFrames" id="SpriteFrames_ecmpi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_llq3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quhl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j68kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luhjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf1k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wij6b")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_e1mcn"]
font = ExtResource("7_e5i0j")
font_size = 20
outline_size = 2
outline_color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="game-over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sxxry")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(641, 373)
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_ecmpi")
autoplay = "default"

[node name="ReplayButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 486.0
offset_top = 272.0
offset_right = 614.0
offset_bottom = 400.0
texture_normal = ExtResource("2_mty3d")
texture_pressed = ExtResource("3_ywqux")

[node name="ExitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 657.0
offset_top = 268.0
offset_right = 785.0
offset_bottom = 396.0
texture_normal = ExtResource("4_loady")
texture_pressed = ExtResource("5_t86hf")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 106.0
offset_right = 917.0
offset_bottom = 235.0
label_settings = SubResource("LabelSettings_e1mcn")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(645, 362)

[connection signal="pressed" from="ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
